--- a/Assignment 04 Text and Sequence/Assignment_4.ipynb
+++ b/Assignment 04 Text and Sequence/Assignment_4.ipynb
@@ -20,12 +20,12 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/krishnakumarreddy007/64061_ktavva/blob/main/Assignment 04 Text %26 Sequence/Assignment_4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/krishnakumarreddy007/64061_ktavva/blob/main/Assignment%2004%20Text%20and%20Sequence/Assignment_4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "jSiF_M4ZWA_6"
       },
@@ -42,7 +42,7 @@
       "metadata": {
         "id": "2XMtkJqTWLz-"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "0B3oiDCOW_iZ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "7mzlgBBpXdIY"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "jMbYsNlwXgcZ"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         },
         "outputId": "fe696d9f-f882-43ea-a197-2ad893524bef"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "wzC9L4xbet8x"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
         "id": "WNSr4P8MexJj",
         "outputId": "f36a19bd-9df8-4a2f-9514-b89880ea74c1"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +264,7 @@
         "id": "RYVuS1ULEcSu",
         "outputId": "4c63d699-aa84-4e7f-cd2d-4933ad8ef827"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -370,7 +370,7 @@
         "id": "GnSkSZZ4BzHw",
         "outputId": "4a6bbeae-aba0-4c34-e13a-95ec190701d7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +537,7 @@
         "id": "zmwg6naKaY_p",
         "outputId": "b3923554-6d72-46f4-efbe-9c5d10dac50f"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,7 +706,7 @@
         "id": "p2A2XmYxb8My",
         "outputId": "7be6ddc8-01c9-4af4-c146-c808318bc32e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,7 +817,7 @@
         "id": "ib-vC3LEd-D7",
         "outputId": "a7abca90-b182-4768-8a14-4c2490f895f4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -856,7 +856,7 @@
       "metadata": {
         "id": "t7F9cYP_eOgw"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -932,7 +932,7 @@
         "id": "mCGKoEUxiEgF",
         "outputId": "9f1cffe7-e7c9-475e-84ae-270a9edb3c10"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +1000,7 @@
         "id": "74LFabI03sTX",
         "outputId": "5a449b9f-f0b3-4b61-c12d-016911940836"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1027,7 +1027,7 @@
       "metadata": {
         "id": "z0xDO5GLkL7e"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1061,7 +1061,7 @@
         "id": "7BcADU2gkN5a",
         "outputId": "4d13a1bb-8462-4f07-fee5-3ed839f41006"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1097,7 +1097,7 @@
       "metadata": {
         "id": "G1cwlbl1kWdn"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1128,7 +1128,7 @@
         "id": "SFMZCXp2kxkp",
         "outputId": "f7fd7608-dbe3-4a1b-a2f6-01b31a607d77"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1221,7 +1221,7 @@
         "id": "U9gufmRrlbSL",
         "outputId": "53d9dfae-d3dc-45bc-df34-209951093fb5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1350,7 +1350,7 @@
         "id": "XQYpx1qsqWLV",
         "outputId": "6ed591a2-0ae6-4244-e4f3-5aec7a28e68d"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1544,7 +1544,7 @@
         "id": "I8qcM9DZ5V-E",
         "outputId": "bb5ea050-6da1-41fb-b157-d3f530353f06"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1738,7 +1738,7 @@
         "id": "Bep27Xwy58jx",
         "outputId": "76efd58f-a129-4904-c8cd-e03ee92dd177"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
